--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,8 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "socket.io-client": "^4.8.1",
+    "viem": "^2.33.1",
+    "wagmi": "^2.16.0",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
