--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,8 @@
     "@fontsource/roboto": "^5.2.6",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@tanstack/react-query": "^5.83.0",
+    "@wagmi/connectors": "^5.9.0",
     "autoprefixer": "^10.4.21",
     "framer-motion": "^12.23.6",
     "next": "15.4.1",
